--- a/package.json
+++ b/package.json
@@ -10,16 +10,32 @@
     "prettier": "prettier --write src/**/*.ts",
     "prepare": "husky install",
     "precommit": "yarn lint-fix && yarn prettier",
-    "prepush": "yarn lint"
+    "prepush": "yarn lint",
+    "start:dev": "ts-node-dev --respawn --pretty --transpile-only src/index.ts"
   },
   "author": "CRES-UJUZI",
   "license": "MIT",
   "devDependencies": {
+    "@types/cors": "^2.8.12",
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.14",
+    "@types/helmet": "^4.0.0",
+    "@types/node": "^18.8.3",
     "@typescript-eslint/eslint-plugin": "^5.39.0",
     "@typescript-eslint/parser": "^5.39.0",
     "eslint": "^8.25.0",
     "husky": "^8.0.1",
     "prettier": "^2.7.1",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.4"
+  },
+  "dependencies": {
+    "@types/http-status-codes": "^1.2.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "helmet": "^6.0.0",
+    "http": "^0.0.1-security",
+    "http-status-codes": "^2.2.0"
   }
 }
