--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,5 +6,5 @@
     "sourceMap": true
   },
   "exclude": ["node_modules", "dist"],
-  "include": ["src/**/*", "src/**/*.ts"]
+  "include": ["src/**/*", "src/**/*.ts"," ./src/global.d.ts"]
 }
