--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.14",
     "@types/helmet": "^4.0.0",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^18.8.3",
     "@typescript-eslint/eslint-plugin": "^5.39.0",
     "@typescript-eslint/parser": "^5.39.0",
@@ -36,6 +37,7 @@
     "express": "^4.18.2",
     "helmet": "^6.0.0",
     "http": "^0.0.1-security",
-    "http-status-codes": "^2.2.0"
+    "http-status-codes": "^2.2.0",
+    "mongoose": "^6.6.5"
   }
 }
