--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.14",
     "@types/helmet": "^4.0.0",
+    "@types/http-errors": "^1.8.2",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^18.8.3",
     "@typescript-eslint/eslint-plugin": "^5.39.0",
@@ -32,13 +33,14 @@
     "typescript": "^4.8.4"
   },
   "dependencies": {
-    "@types/http-status-codes": "^1.2.0",
+    "@hapi/joi": "^17.1.1",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "helmet": "^6.0.0",
     "http": "^0.0.1-security",
+    "http-errors": "^2.0.0",
     "http-status-codes": "^2.2.0",
     "mongoose": "^6.6.5"
   }
