--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/express": "^4.17.14",
     "@types/helmet": "^4.0.0",
     "@types/http-errors": "^1.8.2",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^18.8.3",
     "@typescript-eslint/eslint-plugin": "^5.39.0",
@@ -34,6 +35,7 @@
   },
   "dependencies": {
     "@hapi/joi": "^17.1.1",
+    "@types/hapi__joi": "^17.1.8",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -42,6 +44,7 @@
     "http": "^0.0.1-security",
     "http-errors": "^2.0.0",
     "http-status-codes": "^2.2.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.5"
   }
 }
