--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "prepare": "husky install",
     "precommit": "yarn lint-fix && yarn prettier",
     "prepush": "yarn lint",
-    "start:dev": "ts-node-dev --respawn --pretty --transpile-only src/index.ts"
+    "start:dev": "ts-node-dev --respawn --pretty --transpile-only src/index.ts",
+    "deploy" : "heroku origin=main && heruko push origin main"
   },
   "author": "CRES-UJUZI",
   "license": "MIT",
