--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Setup node
         uses: actions/setup-node@v2
         with:
-          node-version: [16.x]
+          node-version: '16.x'
       - run : yarn i
       - run : yarn build
       - run : yarn start:dev
