--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: '16.x'
-      - run : yarn i
+      - run : yarn install
       - run : yarn build
       - run : yarn start:dev
    
